[B]Version 1.0.3[/B]
    * Fixed problem with adding unquoted urls

[B]Version 1.0.2[/B]
    * Added spanish translation (thanks to yowill)
    * Added new actions: 'Add links from textfile', 'Add link container', 'Reconnect router'

[B]Version 1.0.1[/B]
    * Changed license to GPL v3
    * Uses notifications instead of dialogs for messages
    * Improved interface for other addons

[B]Version 1.0.0[/B]
    * Added German translation
    * Handle 'failed connection' error

[B]Version 0.1.1[/B]
    * Fixed Bug: Only the first package was listed

[B]Version 0.1.0[/B]
    * Initial release