@@ -1,3 +1,6 @@
+[B]Version 1.0.4[/B]
+    * Added new features: use hostname, use fall back connection
+
 [B]Version 1.0.3[/B]
     * Fixed problem with adding unquoted urls
 
